            http://trac.seagullproject.org/wiki/Howto/WorkingWithCliOrHttpRequests
04-05-06    Fixed bug where array internal pointer was not set for module list,
            caused SectionMgr to fail to list modules
03-05-06    Fixed cmdline installer, envRebuild.php
01-05-06    Installer password was wiped doing a rebuild, now fixed (Julien Casanova)

IMPROVEMENTS
22-05-06    Added lang switcher to new theme (Julien Casanova)
22-05-06    OCI schema and data now up to date (Ben)
22-05-06    Added ability to call makeUrl() from JavaScript (Miha Vrhovnik), see
            http://trac.seagullproject.org/wiki/Howto/UriManagement#GeneratingURIsinJavaScript
17-05-06    Refactored LoginMgr to support observers, implemented FUD forum login
            hook
10-05-06    Some updates for gallery module, to ensure compatibility with Gallery 2.1
            (Neil Mather)
10-05-06    A member user is now added as part of rebuild
09-05-06    Added request history to session, ability to return to a previously
            requested page on authorisation failure
06-05-06    Implemented a library cache for all files used on every request,
            loaded file count back near 20.  To enabled place a file named 'ENABLE_LIBCACHE.txt'
            in your seagull/var directory.  To update the cache, delete the file.
01-05-06    Install and rebuild process will now build the correct fk links file
            for DB_DataObject
01-05-06    You can now customise the location of the upload directory
30-04-06    HTML date widget cleanup
30-04-06    Module generator can now add additional managers per module
27-04-06    Wizard functionality reinstated (Steven Stremciuc)
26-04-06    Added ability to customise location of the modules directory
24-04-06    Modified RSS export to use custom filter chain
22-04-06    Japanese translation added (Dozo Yousan)

+-----------------------+
| VERSION: 0.6.0RC2     |
+-----------------------+
BUGFIXES